# agl-report-reader

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.direnv/: flake-profile-1-link
agl_report_reader/: report_reader.py  settings.py  utils.py
agl_report_reader/anonymization/: __init__.py  redact.py
agl_report_reader/extraction/: __init__.py  examination_data.py  patient_data.py
