[tool.poetry]
name = "agl-report-reader"
version = "0.3.1"
description = "Read and anonymize medical reports"
authors = ["Thomas J. Lux"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Faker = "^19.10.0"
gender-guesser = "^0.4.0"
pdfplumber = "^0.11.4"

[tool.poetry.group.nixProvided.dependencies]
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
